--- a/README.html
+++ b/README.html
@@ -754,11 +754,6 @@ PreInc and PostInc not implemented (tests/postinc.php, tests/preposincrement.php
 </li>
 <li>
 <p>
-Recursive functions with static variables (tests/countTo10.php)
-</p>
-</li>
-<li>
-<p>
 PlusAssign (tests/plusassign.php)
 </p>
 </li>
@@ -812,11 +807,6 @@ ASPOpenTag not implemented (still runs because it&#8217;s ignored) (tests/syntax
 <li>
 <p>
 sglri does not allow combination of different sytles of open-close tags (tests/syntax/phptagcombination.php)
-</p>
-</li>
-<li>
-<p>
-sglri seems to now allow lambdas! (tests/basicsdatatypes/callback/callbackclosure.php)
 </p>
 </li>
 </ol></div>
@@ -1035,38 +1025,69 @@ Declare (tests/controlstruct/declare.php)
 sglri does not support Goto (tests/controlstruct/goto.php)
 </p>
 </li>
+<li>
+<p>
+empty block (tests/functions/funconditional.php)
+</p>
+</li>
 </ol></div>
-<div class="paragraph"><p>Useful functions</p></div>
-<div class="listingblock">
-<div class="content">
-<pre><tt>vamanage functions (tests/varmanage/*)
+</div>
+</div>
+<div class="sect1">
+<h2 id="_functions">12. Functions</h2>
+<div class="sectionbody">
+<div class="olist arabic"><ol class="arabic">
+<li>
+<p>
+sglri seems to now allow lambdas! (tests/basicsdatatypes/callback/callbackclosure.php)
+</p>
+</li>
+<li>
+<p>
+Recursive functions with static variables (tests/functions/countTo10.php)
+</p>
+</li>
+<li>
+<p>
+conditional functions (tests/functions/funconditional.php)
+</p>
+</li>
+</ol></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_useful_functions">13. Useful functions</h2>
+<div class="sectionbody">
+<div class="paragraph"><p>vamanage functions (tests/varmanage/*)
 var_dump (tests/basicdatatypes/scalar/boolean/boolcheck.php)
 gettype  (tests/basicdatatypes/gettype.php)
 error_reporting(E_ALL);
-ini_set('display_errors', true);
-ini_set('html_errors', false);
-settype()
-
-The used lattice</tt></pre>
-</div></div>
+ini_set(<em>display_errors</em>, true);
+ini_set(<em>html_errors</em>, false);
+settype()</p></div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_mfp_minimal_fixed_point">12. MFP - Minimal Fixed Point</h2>
+<h2 id="_the_used_lattice">14. The used lattice</h2>
+<div class="sectionbody">
+</div>
+</div>
+<div class="sect1">
+<h2 id="_mfp_minimal_fixed_point">15. MFP - Minimal Fixed Point</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>Elaborate</p></div>
 <div class="sect2">
-<h3 id="_embellished_monotone_framework">12.1. Embellished monotone framework</h3>
+<h3 id="_embellished_monotone_framework">15.1. Embellished monotone framework</h3>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_usage_and_graph_generation">13. Usage and Graph Generation</h2>
+<h2 id="_usage_and_graph_generation">16. Usage and Graph Generation</h2>
 <div class="sectionbody">
 </div>
 </div>
 <div class="sect1">
-<h2 id="_notes_on_the_language">14. Notes on the language</h2>
+<h2 id="_notes_on_the_language">17. Notes on the language</h2>
 <div class="sectionbody">
 <div class="ulist"><ul>
 <li>
@@ -1081,7 +1102,7 @@ PHP and short-circuiting
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-12-16 12:06:21 EET
+Last updated 2011-12-16 12:19:11 EET
 </div>
 </div>
 </body>
