--- a/README.html
+++ b/README.html
@@ -735,6 +735,11 @@ Creating/modifying with square bracket syntax
 Ifelse constructs (tests/controlstruct/ifelse.php)
 </p>
 </li>
+<li>
+<p>
+User-defined functions without parameters (tests/functions/simple.php)
+</p>
+</li>
 </ol></div>
 </div>
 </div>
@@ -1052,6 +1057,11 @@ Recursive functions with static variables (tests/functions/countTo10.php)
 conditional functions (tests/functions/funconditional.php)
 </p>
 </li>
+<li>
+<p>
+function within a function (tests/functions/funfun.php)
+</p>
+</li>
 </ol></div>
 </div>
 </div>
@@ -1065,29 +1075,47 @@ error_reporting(E_ALL);
 ini_set(<em>display_errors</em>, true);
 ini_set(<em>html_errors</em>, false);
 settype()</p></div>
+<div class="sect2">
+<h3 id="_todo">13.1. TODO</h3>
+<div class="olist arabic"><ol class="arabic">
+<li>
+<p>
+Extend test suite
+1.1 It would be nice to have a golden suite to check consistency of the project in case of major changes.
+</p>
+</li>
+<li>
+<p>
+Improve output visualization
+2.1 Allow both usage of check and full analysis
+2.2 Allow visualization of the flow with a graph (difficult to debug functions at the moment)
+</p>
+</li>
+<li>
+<p>
+Implement items not supported
+</p>
+</li>
+</ol></div>
+</div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_the_used_lattice">14. The used lattice</h2>
-<div class="sectionbody">
-</div>
-</div>
-<div class="sect1">
-<h2 id="_mfp_minimal_fixed_point">15. MFP - Minimal Fixed Point</h2>
+<h2 id="_mfp_minimal_fixed_point">14. MFP - Minimal Fixed Point</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>Elaborate</p></div>
 <div class="sect2">
-<h3 id="_embellished_monotone_framework">15.1. Embellished monotone framework</h3>
+<h3 id="_embellished_monotone_framework">14.1. Embellished monotone framework</h3>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_usage_and_graph_generation">16. Usage and Graph Generation</h2>
+<h2 id="_usage_and_graph_generation">15. Usage and Graph Generation</h2>
 <div class="sectionbody">
 </div>
 </div>
 <div class="sect1">
-<h2 id="_notes_on_the_language">17. Notes on the language</h2>
+<h2 id="_notes_on_the_language">16. Notes on the language</h2>
 <div class="sectionbody">
 <div class="ulist"><ul>
 <li>
@@ -1102,7 +1130,7 @@ PHP and short-circuiting
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-12-16 12:19:11 EET
+Last updated 2011-12-16 12:29:36 EET
 </div>
 </div>
 </body>
