--- a/README.html
+++ b/README.html
@@ -1081,13 +1081,13 @@ settype()</p></div>
 <li>
 <p>
 Extend test suite
-1.1 It would be nice to have a golden suite to check consistency of the project in case of major changes.
+1.1 It would be nice to have a golden suite to check consistency of the project in case of major changes
 </p>
 </li>
 <li>
 <p>
 Improve output visualization
-2.1 Allow both usage of check and full analysis
+2.1 Allow both usage of check and visualization of var &#8594; set of types at the end of the program
 2.2 Allow visualization of the flow with a graph (difficult to debug functions at the moment)
 </p>
 </li>
@@ -1130,7 +1130,7 @@ PHP and short-circuiting
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-12-16 12:29:36 EET
+Last updated 2011-12-16 12:31:12 EET
 </div>
 </div>
 </body>
