--- a/README.html
+++ b/README.html
@@ -746,6 +746,8 @@ User-defined functions without parameters (tests/functions/simple.php)
 <div class="sect1">
 <h2 id="_non_supported_php5_features">7. Non-Supported PHP5 features</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_general">7.1. General</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -774,10 +776,8 @@ Greater, GreaterEqual, Less (tests/controlstruct/elseif.php)
 </li>
 </ol></div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_syntax">8. Syntax</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_syntax">7.2. Syntax</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -816,10 +816,8 @@ sglri does not allow combination of different sytles of open-close tags (tests/s
 </li>
 </ol></div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_types">9. Types</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_types">7.3. Types</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -898,10 +896,8 @@ tests/basicdatatypes/typejuggling.php analysis is wrong
 </li>
 </ol></div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_variables">10. Variables</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_variables">7.4. Variables</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -955,10 +951,8 @@ DeclareStatic not implemented (tests/varscope/static.php)
 </li>
 </ol></div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_control_structures">11. Control Structures</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_control_structures">7.5. Control Structures</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -1037,10 +1031,8 @@ empty block (tests/functions/funconditional.php)
 </li>
 </ol></div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_functions">12. Functions</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_functions">7.6. Functions</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -1065,18 +1057,10 @@ function within a function (tests/functions/funfun.php)
 </ol></div>
 </div>
 </div>
+</div>
 <div class="sect1">
-<h2 id="_useful_functions">13. Useful functions</h2>
+<h2 id="_todo">8. TODO</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>vamanage functions (tests/varmanage/*)
-var_dump (tests/basicdatatypes/scalar/boolean/boolcheck.php)
-gettype  (tests/basicdatatypes/gettype.php)
-error_reporting(E_ALL);
-ini_set(<em>display_errors</em>, true);
-ini_set(<em>html_errors</em>, false);
-settype()</p></div>
-<div class="sect2">
-<h3 id="_todo">13.1. TODO</h3>
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
@@ -1099,28 +1083,59 @@ Implement items not supported
 </ol></div>
 </div>
 </div>
-</div>
 <div class="sect1">
-<h2 id="_mfp_minimal_fixed_point">14. MFP - Minimal Fixed Point</h2>
+<h2 id="_mfp_minimal_fixed_point">9. MFP - Minimal Fixed Point</h2>
 <div class="sectionbody">
 <div class="paragraph"><p>Elaborate</p></div>
 <div class="sect2">
-<h3 id="_embellished_monotone_framework">14.1. Embellished monotone framework</h3>
+<h3 id="_embellished_monotone_framework">9.1. Embellished monotone framework</h3>
+<div class="paragraph"><p>Elaborate</p></div>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_usage_and_graph_generation">15. Usage and Graph Generation</h2>
+<h2 id="_usage_and_graph_generation">10. Usage and Graph Generation</h2>
 <div class="sectionbody">
 </div>
 </div>
 <div class="sect1">
-<h2 id="_notes_on_the_language">16. Notes on the language</h2>
+<h2 id="_notes_on_the_language">11. Notes on the language</h2>
 <div class="sectionbody">
-<div class="ulist"><ul>
+<div class="paragraph"><p>PHP 5 is a high-order language.</p></div>
+<div class="ulist"><div class="title">Useful functions</div><ul>
 <li>
 <p>
-PHP and short-circuiting
+vamanage functions (tests/varmanage/*)
+</p>
+</li>
+<li>
+<p>
+var_dump (tests/basicdatatypes/scalar/boolean/boolcheck.php)
+</p>
+</li>
+<li>
+<p>
+gettype  (tests/basicdatatypes/gettype.php)
+</p>
+</li>
+<li>
+<p>
+error_reporting(E_ALL);
+</p>
+</li>
+<li>
+<p>
+ini_set(<em>display_errors</em>, true);
+</p>
+</li>
+<li>
+<p>
+ini_set(<em>html_errors</em>, false);
+</p>
+</li>
+<li>
+<p>
+settype()
 </p>
 </li>
 </ul></div>
@@ -1130,7 +1145,7 @@ PHP and short-circuiting
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-12-16 12:31:12 EET
+Last updated 2011-12-16 12:38:57 EET
 </div>
 </div>
 </body>
