basic support for strings on the visualizer

--- a/README.html
+++ b/README.html
@@ -740,6 +740,16 @@ Ifelse constructs (tests/controlstruct/ifelse.php)
 User-defined functions without parameters (tests/functions/simple.php)
 </p>
 </li>
+<li>
+<p>
+Recursive functions (I believe not all recursive functions are supported) (tests/functions/fac.php)
+</p>
+</li>
+<li>
+<p>
+Return statement (tests/functions/fac.php)
+</p>
+</li>
 </ol></div>
 </div>
 </div>
@@ -772,6 +782,21 @@ XorAssign not implemented (tests/efficientswap.php)
 <li>
 <p>
 Greater, GreaterEqual, Less (tests/controlstruct/elseif.php)
+</p>
+</li>
+<li>
+<p>
+Exceptions (tests/exceptions/*)
+</p>
+</li>
+<li>
+<p>
+Not (tests/exceptions/exception.php)
+</p>
+</li>
+<li>
+<p>
+Classes and Objects (tests/oo/*)
 </p>
 </li>
 </ol></div>
@@ -1036,7 +1061,7 @@ empty block (tests/functions/funconditional.php)
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
-sglri seems to now allow lambdas! (tests/basicsdatatypes/callback/callbackclosure.php)
+sglri seems to now allow lambdas! (tests/basicsdatatypes/callback/callbackclosure.php, tests/functions/lambda.php)
 </p>
 </li>
 <li>
@@ -1054,6 +1079,21 @@ conditional functions (tests/functions/funconditional.php)
 function within a function (tests/functions/funfun.php)
 </p>
 </li>
+<li>
+<p>
+function with array as parameter (tests/functions/funtakesarray.php)
+</p>
+</li>
+<li>
+<p>
+function with default parameter (tests/functions/fundefaultpar.php)
+</p>
+</li>
+<li>
+<p>
+FunctionDeclRef (tests/functions/funretref.php)
+</p>
+</li>
 </ol></div>
 </div>
 </div>
@@ -1064,7 +1104,7 @@ function within a function (tests/functions/funfun.php)
 <div class="olist arabic"><ol class="arabic">
 <li>
 <p>
-Extend test suite
+Extend test suite (missing test cases for classes and objects)
 1.1 It would be nice to have a golden suite to check consistency of the project in case of major changes
 </p>
 </li>
@@ -1105,7 +1145,7 @@ Implement items not supported
 <div class="ulist"><div class="title">Useful functions</div><ul>
 <li>
 <p>
-vamanage functions (tests/varmanage/*)
+varmanage functions (tests/varmanage/*)
 </p>
 </li>
 <li>
@@ -1138,6 +1178,11 @@ ini_set(<em>html_errors</em>, false);
 settype()
 </p>
 </li>
+<li>
+<p>
+function_exists()
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -1145,7 +1190,7 @@ settype()
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2011-12-16 12:38:57 EET
+Last updated 2011-12-16 23:51:03 EET
 </div>
 </div>
 </body>
