added info about css and js

--- a/README.html
+++ b/README.html
@@ -714,7 +714,7 @@ DumpIterations - Dumps all information used by Analyse to build the website. Thi
 </li>
 <li>
 <p>
-Analyse - Generates a website under the directory of the testfile with the name (testfile ++ "output").
+Analyse - Generates a website under the directory of the testfile with the name (testfile ++ "output"). If the website seems broken a possible reason might be that the link to the css and the js script is broken since these are hardcoded for simplicity. Change those links in WebApp/WebApp.hs
 </p>
 </li>
 <li>
@@ -1297,7 +1297,7 @@ I used the <strong>Vulcan Logic Dumper</strong> has a debugger and it was quite 
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-02-16 20:29:03 EET
+Last updated 2012-02-16 21:09:10 EET
 </div>
 </div>
 </body>
